--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ iced = "0.13.1"
 
 anyhow = "1.0"
 
-twilight-gateway = "0.16"
-twilight-http = { default-features = false, version = "0.16", features = ["native-tls"] }
+twilight-gateway = { version = "0.16", features = ["native-tls", "simd-json", "zlib-simd"] }
+twilight-http = { default-features = false, version = "0.16", features = ["native-tls", "simd-json"] }
 twilight-http-ratelimiting = { default-features = false, version = "0.16.0" }
 twilight-model = "0.16"
 twilight-cache-inmemory = "0.16"
@@ -23,6 +23,7 @@ hyper-util = { default-features = false, features = ["client-legacy", "http1", "
 hyper-tls = { default-features = false, features = ["alpn"], version = "0.6" }
 
 tokio = { version = "1.42.0", features = ["full"] }
+tokio-websockets = { default-features = false, features = ["client", "fastrand", "sha1_smol", "simd"], version = "0.11" }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
